@@ -1,0 +1,1 @@
+<jsp:forward page="/profile/Metadata/SAML" />
